fix[art-nav]: header jumping when closing because of scroll percentage

--- a/src/components/ArticleNavigator/styles.css
+++ b/src/components/ArticleNavigator/styles.css
@@ -1,9 +1,11 @@
 .header {
   --scroll-w: 15px;
+  /* prevents header jumping
+    also see #25-04-01-00-14 */
   transition: right 0ms 50ms;
 }
 
-.header.navigator-opened {
+.header.navigator-expanded {
   right: var(--scroll-w);
   transition: right 0ms 0ms;
 }
